--- a/MeSirvesWebApp/src/main/webapp/resources/templates/editor.html
+++ b/MeSirvesWebApp/src/main/webapp/resources/templates/editor.html
@@ -1,1 +1,3 @@
-<canvas id="canvas{{id}}" width="{{width}}" height="{{height}}"></canvas>
+<div data-drop="true" jqyoui-droppable="{onDrop:'onDrop', onOver: 'onOver', onOut:'onOut', containment:'position'}" ng-model="elementDropped">
+	<canvas id="canvas{{id}}" width="{{width}}" height="{{height}}"></canvas>
+</div>
