--- a/MeSirvesWebApp/src/main/webapp/resources/views/componentEditor.html
+++ b/MeSirvesWebApp/src/main/webapp/resources/views/componentEditor.html
@@ -22,9 +22,8 @@
 
 
 	<div ng-controller="MainController" ng-cloak>
-	<div class="btn btn-primary" data-drag="true" data-jqyoui-options="{revert: 'invalid'}" ng-model="list1" jqyoui-draggable="{animate:true}" >aaaaaaaaaaaa</div>
-<div data-drop="true" jqyoui-droppable="{onDrop:prueba()}">adiosssssssssssssssss</div>
-	
+		<componentes></componentes>
+
 		<editor id="component" test="eduuu" width="800" height="500">
 		</editor>
 
